# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-hooks.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
pep_pre_commit_hooks/: __init__.py  core.py  verify_git_email.py
tests/: cli_test.py  conftest.py  core_test.py  verify_git_email_test.py
